crates/tokf-cli/tests/fixtures/generic/rust_errors.txt
   Compiling serde v1.0.197
   Compiling tokio v1.37.0
   Compiling clap v4.5.4
   Compiling regex v1.10.4
   Compiling anyhow v1.0.82
   Compiling toml v0.8.12
   Compiling my-app v0.1.0 (/home/user/my-app)
error[E0308]: mismatched types
  --> src/main.rs:42:18
   |
42 |     let x: u32 = "hello";
   |            ---   ^^^^^^^ expected `u32`, found `&str`
   |            |
   |            expected due to this

error[E0425]: cannot find value `undefined_var` in this scope
  --> src/lib.rs:15:5
   |
15 |     undefined_var
   |     ^^^^^^^^^^^^^ not found in this scope

warning: unused variable: `y`
  --> src/lib.rs:10:9
   |
10 |     let y = 42;
   |         ^ help: if this is intentional, prefix it with an underscore: `_y`

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
error: could not compile `my-app` (bin "my-app") due to 2 previous errors; 1 warning emitted
